# SOproject_18-19

./: CMakeLists.txt  README.md  gestore.c  jedi  jedi.c  lib.h  lib_sem.c  libs_structs.h  makefile  opt.conf  padawan  padawan.c  professor  professor.c  run.sh  struct.h  student  student.c
